[gd_scene load_steps=48 format=3 uid="uid://bu787mbegg5wp"]

[ext_resource type="PackedScene" uid="uid://csohifpc4ffbj" path="res://BaseGameObjects/Inventory/CombatItems/Guns/Gun.tscn" id="1_rh3ka"]
[ext_resource type="PackedScene" uid="uid://be8tc5io52uop" path="res://Content/Demo/Code/Items/Weapons/Barracuda/BarracudeWeaponModel.tscn" id="2_4q502"]
[ext_resource type="Texture2D" uid="uid://djcc3glt68we5" path="res://Content/Demo/Assets/Weapons/Barracuda/BarracudaInventoryImage.png" id="2_5lj57"]
[ext_resource type="Script" path="res://Content/Demo/Code/Items/Weapons/Barracuda/Barracuda.gd" id="2_qm1ix"]
[ext_resource type="Script" path="res://BaseGameObjects/Inventory/CombatItems/Guns/Magazine.gd" id="3_8m5by"]
[ext_resource type="PackedScene" uid="uid://4d3osy1662sk" path="res://Content/Demo/Code/Items/Ammo/SmallCaliberPistolAmmo.tscn" id="4_1abbt"]
[ext_resource type="PackedScene" uid="uid://dkqcr854w5h5r" path="res://BaseGameObjects/SoundMaster.tscn" id="4_7uw4p"]
[ext_resource type="PackedScene" uid="uid://dy3lxn5ag4n30" path="res://Content/Demo/Code/Items/Weapons/Barracuda/BarracudaGroundModel.tscn" id="4_h3yxy"]
[ext_resource type="Script" path="res://BaseGameObjects/RPGMechanics/RPGTags.gd" id="5_0nnc5"]
[ext_resource type="AudioStream" uid="uid://cnhor7kjcshos" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_fire1-001.wav" id="5_57itd"]
[ext_resource type="Script" path="res://BaseGameObjects/Inventory/CombatItems/Guns/Ammo/AmmoType.gd" id="5_qwpgl"]
[ext_resource type="Script" path="res://UIObjects/InventoryUI/ItemDescription/ItemStatEntry.gd" id="6_1mdt5"]
[ext_resource type="Script" path="res://UIObjects/InventoryUI/ItemDescription/ItemStatEntryCollection.gd" id="6_7lrqk"]
[ext_resource type="AudioStream" uid="uid://bru623sjul5d" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_fire1-002.wav" id="6_cup2l"]
[ext_resource type="PackedScene" uid="uid://dknju1ust6muh" path="res://Content/Demo/Code/Items/Ammo/SmallCaliberPistolAmmoOverPressure.tscn" id="6_q24x7"]
[ext_resource type="AudioStream" uid="uid://bydiwmouobf3" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_fire1-003.wav" id="7_5qr6x"]
[ext_resource type="AudioStream" uid="uid://iccr66ali4hp" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_fire1-004.wav" id="8_tvs27"]
[ext_resource type="AudioStream" uid="uid://dn5lyemmo3sbu" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_fire2-001.wav" id="9_qu84u"]
[ext_resource type="AudioStream" uid="uid://4mhrqv37cxo0" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_fire2-002.wav" id="10_3dtl5"]
[ext_resource type="AudioStream" uid="uid://dlo51plafpmia" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_fire2-003.wav" id="11_t7yw7"]
[ext_resource type="AudioStream" uid="uid://dutyuucjbhqek" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_fire2-004.wav" id="12_0pq53"]
[ext_resource type="PackedScene" uid="uid://c0nj5sjqhxuxt" path="res://Content/Demo/Code/Items/Weapons/Barracuda/BarracudaBullet.tscn" id="13_hyg3r"]
[ext_resource type="AudioStream" uid="uid://dxrtyglau3hjr" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_fire3-001.wav" id="13_t4jut"]
[ext_resource type="AudioStream" uid="uid://cqy3sbmckdgo6" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_fire3-002.wav" id="14_mjpvl"]
[ext_resource type="PackedScene" uid="uid://nsqqf6yi4bdr" path="res://Content/Demo/Code/Items/Weapons/Barracuda/BarracudaOverpressuredBullet.tscn" id="14_pgyqs"]
[ext_resource type="AudioStream" uid="uid://c656hpsgu62m6" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_fire3-003.wav" id="15_wndlo"]
[ext_resource type="AudioStream" uid="uid://d1gok0wk3dewf" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_fire3-004.wav" id="16_a7c3u"]
[ext_resource type="AudioStream" uid="uid://wlh74xy1ttja" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_select-fire-001.wav" id="17_kqblx"]
[ext_resource type="AudioStream" uid="uid://capaqsuofhmto" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_mag-eject-001.wav" id="18_1x2ik"]
[ext_resource type="AudioStream" uid="uid://c3sb6gibrybee" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_mag-insert-001.wav" id="19_4n8hd"]
[ext_resource type="AudioStream" uid="uid://we7vebauqiur" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_mag-insert-002.wav" id="20_oqvvv"]
[ext_resource type="AudioStream" uid="uid://cps4tt330xwh" path="res://Content/Demo/Assets/Weapons/TheBackup/Audio/the-backup_dry-fire-001.wav" id="21_02nqp"]

[sub_resource type="Resource" id="Resource_2cxdy"]
script = ExtResource("6_1mdt5")
stat_title = "Damage"
stat_value = "3"
stat_value_colour = Color(0.641577, 0.088861, 0.157988, 1)

[sub_resource type="Resource" id="Resource_aq5xs"]
script = ExtResource("6_1mdt5")
stat_title = "Capacity"
stat_value = "50"
stat_value_colour = Color(0.572335, 0.429194, 0.0976343, 1)

[sub_resource type="Resource" id="Resource_kn06m"]
script = ExtResource("6_1mdt5")
stat_title = "Reload Spd."
stat_value = "2.25 s"
stat_value_colour = Color(0.572335, 0.429194, 0.0976343, 1)

[sub_resource type="Resource" id="Resource_4xbpg"]
script = ExtResource("6_1mdt5")
stat_title = "Handling"
stat_value = "Poor"
stat_value_colour = Color(0.0829862, 0.496847, 0.688897, 1)

[sub_resource type="Resource" id="Resource_l6cur"]
script = ExtResource("6_1mdt5")
stat_title = "Accuracy"
stat_value = "Average"
stat_value_colour = Color(0.0829862, 0.496847, 0.688897, 1)

[sub_resource type="Resource" id="Resource_u0ma8"]
script = ExtResource("6_1mdt5")
stat_title = "Recoil"
stat_value = "High"
stat_value_colour = Color(0.0823529, 0.498039, 0.690196, 1)

[sub_resource type="Resource" id="Resource_b3s31"]
script = ExtResource("6_1mdt5")
stat_title = "Mode"
stat_value = "Semi"
stat_value_colour = Color(0.662452, 0.662452, 0.662452, 1)

[sub_resource type="Resource" id="Resource_g1sgk"]
script = ExtResource("6_1mdt5")
stat_title = "Special"
stat_value = "Dbl Barrel"
stat_value_colour = Color(0.662745, 0.662745, 0.662745, 1)

[sub_resource type="Resource" id="Resource_j4wlm"]
script = ExtResource("6_1mdt5")
stat_title = "Move Spd."
stat_value = "-20%"
stat_value_colour = Color(0.825594, 0.170964, 0.152049, 1)

[sub_resource type="Resource" id="Resource_g5raw"]
script = ExtResource("6_7lrqk")
stat_entry_array = Array[ExtResource("6_1mdt5")]([SubResource("Resource_2cxdy"), SubResource("Resource_aq5xs"), SubResource("Resource_kn06m"), SubResource("Resource_4xbpg"), SubResource("Resource_l6cur"), SubResource("Resource_u0ma8"), SubResource("Resource_b3s31"), SubResource("Resource_g1sgk"), SubResource("Resource_j4wlm")])

[sub_resource type="Resource" id="Resource_scxn1"]
script = ExtResource("5_0nnc5")
tags = Array[String]([])

[sub_resource type="Resource" id="Resource_265mk"]
script = ExtResource("5_qwpgl")
ammo_type = "Parabellum Ammo"
available_subtypes = Array[String](["STRD", "+P"])
subtype_to_ammo_item_mapping = {
"+P": ExtResource("6_q24x7"),
"STRD": ExtResource("4_1abbt")
}
default_ammo_item_scene = ExtResource("4_1abbt")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_hicjr"]
random_pitch = 1.1
streams_count = 4
stream_0/stream = ExtResource("5_57itd")
stream_1/stream = ExtResource("6_cup2l")
stream_2/stream = ExtResource("7_5qr6x")
stream_3/stream = ExtResource("8_tvs27")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_fsqmx"]
random_pitch = 1.1
streams_count = 4
stream_0/stream = ExtResource("9_qu84u")
stream_1/stream = ExtResource("10_3dtl5")
stream_2/stream = ExtResource("11_t7yw7")
stream_3/stream = ExtResource("12_0pq53")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_atcdh"]
streams_count = 4
stream_0/stream = ExtResource("13_t4jut")
stream_1/stream = ExtResource("14_mjpvl")
stream_2/stream = ExtResource("15_wndlo")
stream_3/stream = ExtResource("16_a7c3u")

[node name="Barracuda" instance=ExtResource("1_rh3ka")]
script = ExtResource("2_qm1ix")
is_semi_auto = false
time_between_shots = 0.1
recoil_per_shot = 0.15
movement_spread_recovery_per_second = 2.0
maximum_movement_spread = 0.6
maximum_walking_movement_spread = 0.2
low_ammo_amount = 10
critical_ammo_amount = 5
weapon_model_scene = ExtResource("2_4q502")
inventory_image = ExtResource("2_5lj57")
ground_3d_model_scene = ExtResource("4_h3yxy")
display_name = "Barracuda"
item_id = "barracuda"
player_pose = "rifle"
description = "An NLI PDW capable of emptying its 50 round magazine quickly with its high firerate.

Chambered in Parabellum ammunition. "
default_price = 800
item_stat_entry_collection = SubResource("Resource_g5raw")
rpg_tags = SubResource("Resource_scxn1")
grid_square_width = 3
grid_square_height = 1

[node name="BarracudaMagazine" type="Node3D" parent="." index="0"]
script = ExtResource("3_8m5by")
ammo_type = SubResource("Resource_265mk")
bullet_scene = ExtResource("13_hyg3r")
ammo_subtype_to_bullet_scene_mapping = {
"+P": ExtResource("14_pgyqs"),
"STRD": ExtResource("13_hyg3r")
}
show_quantity_in_ui = true
item_type = 2
delete_at_zero_quantity = false
current_quantity = 50
max_quantity = 50
grid_square_width = 2
grid_square_height = 1

[node name="ReloadMaster" parent="." index="1"]
max_reload_time = 2.25
perfect_zone_length = 0.2

[node name="SoundMaster" parent="." index="2" instance=ExtResource("4_7uw4p")]

[node name="FireHigh" type="AudioStreamPlayer" parent="SoundMaster" index="0"]
stream = SubResource("AudioStreamRandomizer_hicjr")
bus = &"Gun Fire"

[node name="FireLow" type="AudioStreamPlayer" parent="SoundMaster" index="1"]
stream = SubResource("AudioStreamRandomizer_fsqmx")
bus = &"Gun Fire"

[node name="FireCritical" type="AudioStreamPlayer" parent="SoundMaster" index="2"]
stream = SubResource("AudioStreamRandomizer_atcdh")
pitch_scale = 1.1
bus = &"Gun Fire"

[node name="SelectFire" type="AudioStreamPlayer" parent="SoundMaster" index="3"]
stream = ExtResource("17_kqblx")
volume_db = -3.267
bus = &"Gun Other"

[node name="MagEject" type="AudioStreamPlayer" parent="SoundMaster" index="4"]
stream = ExtResource("18_1x2ik")
bus = &"Gun Other"

[node name="MagInsert" type="AudioStreamPlayer" parent="SoundMaster" index="5"]
stream = ExtResource("19_4n8hd")
bus = &"Gun Other"

[node name="MagInsertPerfect" type="AudioStreamPlayer" parent="SoundMaster" index="6"]
stream = ExtResource("20_oqvvv")
bus = &"Gun Other"

[node name="DryFire" type="AudioStreamPlayer" parent="SoundMaster" index="7"]
stream = ExtResource("21_02nqp")
volume_db = -4.357
bus = &"Gun Other"
